class tanımlamalrı, context tanımlamaları, application servislerinin ilk tanımlamaları

--- a/Contact/Rise.Task.Contact.Api/Rise.Task.Contact.Api.csproj
+++ b/Contact/Rise.Task.Contact.Api/Rise.Task.Contact.Api.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Rise.Task.Contact.Application\Rise.Task.Contact.Application.csproj" />
     <ProjectReference Include="..\Rise.Task.Contact.Db\Rise.Task.Contact.Db.csproj" />
   </ItemGroup>
 
