--- a/Report/Rise.Task.Report.Api/appsettings.json
+++ b/Report/Rise.Task.Report.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "RabbitMQUrl": "localhost",
   "ContactMicroserviceUrl": "http://localhost:5501/",
+  "ReportFileDirectory": "wwwroot/reports/",
   "ConnectionStrings": {
     "DefaultConnection": "User ID=sa;Password=1;Server=localhost;Port=5432;Database=reportdb;Integrated Security=true;Pooling=true;"
   },
