--- a/Contact/Rise.Task.Contact.Api/appsettings.json
+++ b/Contact/Rise.Task.Contact.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "RabbitMQUrl": "localhost",
+  "ReportFileDirectory": "wwwroot/reports/",
   "ConnectionStrings": {
     "DefaultConnection": "User ID=sa;Password=1;Server=localhost;Port=5432;Database=contactdb;Integrated Security=true;Pooling=true;"
   },
