--- a/Contact/Rise.Task.Contact.Application/Rise.Task.Contact.Application.csproj
+++ b/Contact/Rise.Task.Contact.Application/Rise.Task.Contact.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Rise.Task.Shared\Rise.Task.Shared.csproj" />
     <ProjectReference Include="..\Rise.Task.Contact.Db\Rise.Task.Contact.Db.csproj" />
     <ProjectReference Include="..\Rise.Task.Contact.Domain\Rise.Task.Contact.Domain.csproj" />
   </ItemGroup>
