--- a/Contact/Rise.Task.Contact.Application/Rise.Task.Contact.Application.csproj
+++ b/Contact/Rise.Task.Contact.Application/Rise.Task.Contact.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.97.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
   </ItemGroup>
 
